Blobs to use state store

--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser-dynamic": "^18.2.7",
     "@angular/router": "^18.2.7",
     "@azure/msal-angular": "^3.0.25",
-    "@azure/msal-browser": "^3.25.0",
+    "@azure/msal-browser": "^3.26.1",
     "@microsoft/signalr": "^8.0.7",
+    "@ngrx/effects": "^18.1.0",
+    "@ngrx/store": "^18.1.0",
+    "@ngrx/store-devtools": "^18.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
